tests/ui/parser/issues/issue-60075.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-60075.rs:4:31
   |
LL |     fn qux() -> Option<usize> {
   |                               ^ unclosed delimiter
LL |         let _ = if true {
LL |         });
   |          ^ mismatched closing delimiter

error: aborting due to 1 previous error

